# gacha-url

./: Cargo.toml  build.rs
.github/workflows/: release.yml
res/: app.manifest  app.rc
src/: config.rs  gacha_url.rs  main.rs  ui.rs
